--- a/dreamxbotz/template/dl.html
+++ b/dreamxbotz/template/dl.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALL Movies Studio | {{file_name}}</title>
+    <title>Powered By : SJ & Made By : Sandman {{file_name}}</title>
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
     <link rel="stylesheet" href="https://biisal.github.io/Resources/StreamCSS.css">
     <link rel="stylesheet" href="https://biisal.github.io/Resources/playerCss.css">
@@ -17,21 +17,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
-<!-- this code is written by @biisal tg:biisal-files  -->
-<!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.   -->
 
 <body>
     <nav>
         <div class="nleft">
             <a href="https://t.me/dreamcinezone">
                 <!-- if u are trying to change the header name please remove the title text from bottom line  -->
-                <h3 id="heading" style="z-index: 100;" class="magnet">dreamcinezone </h3>
+                <h3 id="heading" style="z-index: 100;" class="magnet">Powered By : SJ & Made By : Sandman</h3>
             </a>
         </div>
         <div class="nryt">
             <a class="home-btn magnet" href="#main" onclick="toggleWidthnav(this)">Home</a>
-
-            <a href="#sec1" class="about-btn magnet" onclick="toggleWidthnav(this)">About</a>
         </div>
     </nav>
     <center>
@@ -76,47 +72,13 @@
                     </button>
                 </div>
 
-            </div>
-            <div class="abt">
-                <div class="about">
-                    <div class="about-dets">
-                        <div class="abt-sec" id="sec1" style="padding: 160px 30px;">
-                            <h1 style="text-align: center;">WELCOME TO OUR <Span>STREAMING</Span> PAGE</h1>
-                            <p style="text-align: center; line-height: 2;word-spacing: 2px;  letter-spacing: 0.8px;">
-                                We're
-                                thrilled to have <span>you</span> here.
-                                Get ready for an
-                                amazing <span>experience</span>
-                                filled with <span>entertainment</span>, <span>fun</span>, and <span>surprises</span>.
-                                Grab
-                                your snacks, sit back, and <span>enjoy</span> the show!
-                            </p>
-                        </div>
-                        <div class="abt-sec" id="sec2">
-                            <h1>OUR ALL <span>CHANNELS</span> LIST</h1>
-                            <div class="links chnl-link">
-                                <a class="magnet" href="https://t.me/dreamcinezone"><button>Update Channel </button></a>
-                                <a class="magnet" href="https://t.me/dreamcinezone"><button> Movie Request Group </button></a>
-                                <a class="magnet" href="#https://youtube.com/@dreamcinezone0"><button>YouTube Channel </button></a>
-                            </div>
-                        </div>
-                        <div class="abt-sec" id="sec3">
-                            <h1>OUR ALL <span>BOTS</span> LIST</h1>
-                            <div class="links bot-link">
-                                <a class="magnet" href="https://t.me/"><button>Chat Gpt Bot
-                                        </button></a>
-                                <a class="magnet" href="https://t.me/"><button>reaction Bot 
-                                        </button></a>
-                            </div>
-                        </div>
                         <div class="abt-sec" id="sec4">
                             <!-- this code is written by @biisal tg:biisal-files  -->
                             <!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.   -->
 
-                            <p style="text-align: center;">We Can Tal'k For Your Support And You Can Report Through
-                                Telegram</p>
+                            <p style="text-align: center;">YOU LIKE IT ?🍁</p>
                             <div class="links contact">
-                                <a href="https://t.me/Contact_dreamcinezone_bot"><button>Contact</button></a>
+                                <a href="https://t.me/SandmanBro"><button>Contact</button></a>
                             </div>
                         </div>
                     </div>
@@ -125,10 +87,8 @@
         </div>
         <footer>
             <div class="mid">
-                <h1 class="mid-text">VISIT <a href="#sec3" onclick="bot_btn_clicked()"><span>OUR BOTS LIST</span></a>
-                    FOR
-                    MORE
-                    INFO</h1>
+                <h1 class="mid-text">Powered By : <a href="#sec3" onclick="bot_btn_clicked()"><span>SJ | AJ</span></a>
+                    & Sandman</h1>
             </div>
 
             <div class="last-text">
@@ -143,7 +103,7 @@
             <center>
 
                 <div class="movie-cont">
-                    <a href="https://t.me/dreamcinezone">
+                    <a href="https://t.me/+PA8OPL2Zglk3MDM1">
                         <div class="movieSug">
                             <div class="movieDets">
 
@@ -170,15 +130,15 @@
 
             <center>
                 <div class="copyright">
-                    <h5 class="text-center">Copyright © 2024 <a href="https://t.me/dreamcinezone"><span
-                                style="font-weight: 700;">dreamcinezone </span></a>. All
+                    <h5 class="text-center">Copyright © 2025 <a href="https://t.me/SJ_AJ_Backup"><span
+                                style="font-weight: 700;">SJ | AJ</span></a> All
                         Rights Reserved.</h5>
                     <div class="icons">
                         <a href="https://t.me/dreamcinezone"><i class="fa-brands fa-telegram fa-lg"></i></a>
                         
                     </div>
                     <h4 style="font-weight: 700;">This Page Is Made By <a
-                            href="https://t.me/dreamcinezone"><span>dreamcinezone </span></a></h4>
+                            href="https://t.me/SandmanBro"><span>Sandman</span></a></h4>
                 </div>
             </center>
         </footer>
@@ -204,7 +164,7 @@
     new WOW().init();
 </script>
 <script src="https://cdn.plyr.io/3.6.9/plyr.js"></script>
-<script src="https://biisal.github.io/Resources/StreamJs.js"></script>
+<script src="https://streamlink-two.vercel.app/548/551/Streams.js"></script>
 <script src="script.js"></script>
 
 </html>
