--- a/dreamxbotz/template/dl.html
+++ b/dreamxbotz/template/dl.html
@@ -3,8 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '735196b54deff5b77bbae96694d09ab4',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.topcreativeformat.com/735196b54deff5b77bbae96694d09ab4/invoke.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Powered By : SJ & Made By : Sandman {{file_name}}</title>
+    <title>Filmy Men</title>
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
     <link rel="stylesheet" href="https://biisal.github.io/Resources/StreamCSS.css">
     <link rel="stylesheet" href="https://biisal.github.io/Resources/playerCss.css">
@@ -19,27 +29,26 @@
 </head>
 
 <body>
+	
     <nav>
         <div class="nleft">
-            <a href="https://t.me/dreamcinezone">
-                <!-- if u are trying to change the header name please remove the title text from bottom line  -->
-                <h3 id="heading" style="z-index: 100;" class="magnet">Powered By : SJ & Made By : Sandman</h3>
+            <a href="https://t.me/">
+                <h3 id="heading" style="z-index: 100;" class="magnet">FILMY MEN</h3>
             </a>
         </div>
         <div class="nryt">
-            <a class="home-btn magnet" href="#main" onclick="toggleWidthnav(this)">Home</a>
+            <a class="home-btn magnet" href="#main" onclick="toggleWidthnav(this)">HOME</a>
+
+            <a href="#sec1" class="about-btn magnet" onclick="toggleWidthnav(this)">ABOUT</a>
         </div>
     </nav>
     <center>
         <div class="about-nav">
-            <a href="#sec1" class="wlcm magnet" onclick="toggleWidth(this)">Welcome</a>
-            <a href="#sec2" class="abt-chnl magnet" onclick="toggleWidth(this)">Channels</a>
-            <a href="#sec3" class="magnet bot-btn" onclick="toggleWidth(this) , bot_btn_clicked()">Bots</a>
-            <a href="#sec4" class="magnet contact-btn" onclick="toggleWidth(this)">Let's Talk</a>
+            <a href="#sec2" class="abt-chnl magnet" onclick="toggleWidth(this)">CHANNELS</a>
+            <a href="#sec3" class="magnet bot-btn" onclick="toggleWidth(this) , bot_btn_clicked()">BOTS</a>
+            <a href="#sec4" class="magnet contact-btn" onclick="toggleWidth(this)">LET'S TALK</a>
         </div>
     </center>
-    <!-- this code is written by @biisal tg:biisal-files  -->
-    <!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.   -->
 
     <div class="outer">
         <div class="inner">
@@ -48,37 +57,83 @@
                     width="100%"></video>
                 <div class="player"></div>
                 <div class="file-name">
-                    <h4>File name : </h4>
-                    <br>
                     <p id="myDiv">{{file_name}}</p>
+			<script type="text/javascript">
+	atOptions = {
+		'key' : 'd563c583b0ee8a884d76f4ec503d7f47',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/d563c583b0ee8a884d76f4ec503d7f47/invoke.js"></script>
                 </div>
                 <div class="downloadBtn">
-                    <button class="magnet" onclick="vlc_player()"><img src="https://i.postimg.cc/15TQ4y7B/vlc.png"
-                            alt="">watch in VLC PLAYER</button>
-                    <button class="magnet" onclick="mx_player()"><img src="https://i.postimg.cc/sx4Msv4T/mx.png"
-                            alt="">watch in MX PLAYER</button>
-                    <button class="magnet" onclick="playit_player()"><img src="https://i.postimg.cc/RVGWYJFF/playit.png"
-                            alt="">watch in PLAYit
-                        PLAYER</button>
-                    <button class="magnet" onclick="km_player()"><img src="https://i.postimg.cc/wT9tFQ9Z/km.png"
-                            alt="">watch in KM PLAYER</button>
-                    <button class="magnet" onclick="s_player()"><img src="https://i.postimg.cc/XYJr6NGg/s.png"
-                            alt="">watch in S PLAYER</button>
-                    <button class="magnet" onclick="hd_player()"><img src="https://i.postimg.cc/rFT43LNh/hd.png"
-                            alt="">watch in HD
-                        PLAYER(4K)</button>
                     <button class="magnet" onclick="bisalDownload()"><img style="height: 35px;"
-                            src="https://i.postimg.cc/Zncc9YLq/Pngtree-download-icon-3581467.png" alt="">download video
-                    </button>
+                        src="https://i.postimg.cc/Zncc9YLq/Pngtree-download-icon-3581467.png" alt="">FAST download ⚡⚡</button>
+                    <button class="magnet" onclick="vlc_player()"><img src="https://i.postimg.cc/15TQ4y7B/vlc.png"
+                            alt="">Watch in VLC PLAYER</button>
+                    <button class="magnet" onclick="mx_player()"><img src="https://i.postimg.cc/sx4Msv4T/mx.png"
+                            alt="">Watch in MX PLAYER</button>
+                    <button class="magnet" onclick="playit_player()"><img src="https://i.postimg.cc/VNCwVGjz/IMG-20240408-140543.jpg"
+                            alt="">Watch in PLAYit
+                        PLAYER</button>
+			<script type="text/javascript">
+	atOptions = {
+		'key' : 'd563c583b0ee8a884d76f4ec503d7f47',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/d563c583b0ee8a884d76f4ec503d7f47/invoke.js"></script>
+                    <button class="magnet" onclick="km_player()"><img src="https://i.postimg.cc/wT9tFQ9Z/km.png"
+                            alt="">Watch in KM PLAYER</button>
+                    <button class="magnet" onclick="s_player()"><img src="https://i.postimg.cc/XYJr6NGg/s.png"
+                            alt="">Watch in S PLAYER</button>
+                    <button class="magnet" onclick="hd_player()"><img src="https://i.postimg.cc/rFT43LNh/hd.png"
+                            alt="">Watch in HD
+                        PLAYER(4K)</button>
+			<script type="text/javascript">
+	atOptions = {
+		'key' : 'e6cb36011445f7d0eb2769c308c77d12',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/e6cb36011445f7d0eb2769c308c77d12/invoke.js"></script>
                 </div>
 
+            </div>
+            <div class="abt">
+                <div class="about">
+                    <div class="about-dets">
+                        <div class="abt-sec" id="sec2">
+                            <h1>OUR ALL <span>CHANNELS</span> LIST</h1>
+                            <div class="links chnl-link">
+                                <a class="magnet" href="https://t.me/FilmyMen_Request"><button>MOVIE REQUEST GROUP</button></a>
+                                <a class="magnet" href="https://t.me/FILMY_MEN/68"><button>NEW RELEASE MOVIES</button></a>
+                                <a class="magnet" href="https://t.me/Hindi_Anime_FM"><button>ANIME CHANNEL</button></a>
+                           
+                            </div>
+                        </div>
+                        <div class="abt-sec" id="sec3">
+                            <h1>OUR ALL <span>BOTS</span> LIST</h1>
+                            <div class="links bot-link">
+                                <a class="magnet" href="https://t.me/Gojo_AutoFm_Bot"><button>GOJO</button></a>
+                              
+                            </div>
+                        </div>
                         <div class="abt-sec" id="sec4">
-                            <!-- this code is written by @biisal tg:biisal-files  -->
-                            <!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.   -->
 
-                            <p style="text-align: center;">YOU LIKE IT ?🍁</p>
+                            <p style="text-align: center;">we can tal'k for your support and you can report through
+                                telegram</p>
                             <div class="links contact">
-                                <a href="https://t.me/SandmanBro"><button>Contact</button></a>
+                                <a href="https://t.me/Gojo_SatoruJi"><button>CONTACT ADMIN</button></a>
                             </div>
                         </div>
                     </div>
@@ -86,59 +141,15 @@
             </div>
         </div>
         <footer>
-            <div class="mid">
-                <h1 class="mid-text">Powered By : <a href="#sec3" onclick="bot_btn_clicked()"><span>SJ | AJ</span></a>
-                    & Sandman</h1>
-            </div>
-
-            <div class="last-text">
-                <p style="font-weight: 500;">
-                    Welcome To Our Online Streaming Platform! Our Website Allows Users To Generate Streamable Links For
-                    Various Files Using Telegram Bots. Please Note That We Are Not Responsible For The Content Shared Or
-                    Streamed Through Our Service. Users Are Encouraged To Respect Copyright Laws And Adhere To Our
-                    Community
-                    Guidelines. Enjoy Easy, Hassle-Free File Streaming.
-                </p>
-            </div>
-            <center>
-
-                <div class="movie-cont">
-                    <a href="https://t.me/+PA8OPL2Zglk3MDM1">
-                        <div class="movieSug">
-                            <div class="movieDets">
-
-                            </div>
-                            <div class="movieimg">
-                                <img src="">
-                            </div>
-                        </div>
-                    </a>
-                    <div class="low-width-movie-dets">
-                        <div class="movieStsBar">
-                            <div class="movieDets-mini">
-
-                            </div>
-                        </div>
-                    </div>
-                    <button class="ranMovBtn" onclick="getDets()">Get More Movies Suggestion</button>
-                </div>
-
-            </center>
-            <!-- this code is written by @biisal tg:biisal-files  -->
-            <!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.   -->
-
-
             <center>
                 <div class="copyright">
-                    <h5 class="text-center">Copyright © 2025 <a href="https://t.me/SJ_AJ_Backup"><span
-                                style="font-weight: 700;">SJ | AJ</span></a> All
+                    <h5 class="text-center">Copyright © 2023 <a href="https://t.me/Filmy_Men"><span
+                                style="font-weight: 700;">Filmy Men</span></a>. All
                         Rights Reserved.</h5>
                     <div class="icons">
-                        <a href="https://t.me/dreamcinezone"><i class="fa-brands fa-telegram fa-lg"></i></a>
-                        
+                        <a href="https://t.me/FILMY_MEN"><i class="fa-brands fa-github fa-lg"></i></a>
+                        <a href="https://t.me/Gojo_satoruji"><i class="fa-brands fa-telegram fa-lg"></i></a>
                     </div>
-                    <h4 style="font-weight: 700;">This Page Is Made By <a
-                            href="https://t.me/SandmanBro"><span>Sandman</span></a></h4>
                 </div>
             </center>
         </footer>
@@ -164,7 +175,7 @@
     new WOW().init();
 </script>
 <script src="https://cdn.plyr.io/3.6.9/plyr.js"></script>
-<script src="https://streamlink-two.vercel.app/548/551/Streams.js"></script>
+<script src="https://biisal.github.io/Resources/StreamJs.js"></script>
 <script src="script.js"></script>
 
 </html>
